--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -3,30 +3,11 @@ steps:
     agents:
       docker: "true"
     plugins:
-      - docker-login#v2.0.1:
-          username: tylersmalley
       - docker-compose#v3.7.0:
           build: kibana
-          image-repository: "tylersmalley/kibana-ci"
+          image-repository: "gcr.io/elastic-kibana-184716/buildkite/base"
 
   - wait
 
-  - label: ":node: Units"
-    command: "yarn jest --config src/core/jest.config.js --runInBand"
-    agents:
-      docker: "true"
-    plugins:
-      - docker-login#v2.0.1:
-          username: tylersmalley
-      - docker-compose#v3.7.0:
-          run: kibana
-
-  - label: ":node: Units"
-    command: "yarn jest --config x-pack/plugins/event_log/jest.config.js --runInBand"
-    agents:
-      docker: "true"
-    plugins:
-      - docker-login#v2.0.1:
-          username: tylersmalley
-      - docker-compose#v3.7.0:
-          run: kibana
+  - command: .buildkite/scripts/jest_pipeline.sh | buildkite-agent pipeline upload
+    label: ":pipeline: Upload"
