--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -7,6 +7,8 @@ steps:
           build: kibana
           image-repository: "tylersmalley/kibana-ci"
           push-retries: 5
+    artifact_paths:
+      - "Dockerfile"
 
   - wait
 
